[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-env"
version = "1.0.0"
description = "Hospital Resource Allocation Environment"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["server"]
